# fi-os

./: .gitignore  CMakeLists.txt  main.c
app/dino/: pics.c
app/home/: ui.c
build_sd/: Simsun-15.bdf  font.py  make.py  maker.py  notes  util.py
driver/: keyboard.c  notes.txt  oled.c  sd.c
include/internal/: font.h  home.h  interface.h  keyboard.h  oled.h  sd.h  system.h
include/lib/: STC8H.h  wiringPi.h  wiringPiSPI.h
interface/: interface_zero.c  pico.c
script/font/: font.py  maker.py  notes
script/matrix/: log  maker.py  parser.py  test.h
script/matrix/dino/: .info.txt.un~  info.txt  info.txt~
script/oscilloscope/: oscilloscope.py
system/: boot.c  font.c  fontdata.h  fs.c  system.c
